# opengl_project

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/: xyz.fbx
assets/shaders/: axis.fs  fs.fs
include/: assets.h  context.h  pch.h  renderer.h  utils.h
src/: assets.cpp  context.cpp  main.cpp  utils.cpp
